fixed the spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,11 @@
     
 }
 
+.individualcard{
+
+  margin: 3px;
+}
+
 
 
 
